Add post creation and validation with tests

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,8 +1,13 @@
 {% extends "network/layout.html" %}
+{% load static %}
+
+{% block script %}
+    <script src="{% static 'network/newPost.js' %}"></script>
+{% endblock %}
 
 {% block body %}
     <div class="form-group mx-auto w-50">
-        <form action="" class='p-2'>
+        <form id='new-post' class='p-2'>
             {% csrf_token %}
             {% for field in post_form %}
                 <h5>{{ field.label }}</h5>
