--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -3,18 +3,31 @@
 
 {% block script %}
     <script>
-        var username = '{{ profile.username }}';
+        var section = '{{ profile.username }}';
+        var userIsFollower = {{ user_is_follower }};
     </script>
-    <script src="{% static 'network/newPost.js' %}"></script>
+    <script type='module' src="{% static 'network/newPost.js' %}"></script>
     <script type='module' src="{% static 'network/profile.js' %}"></script>
 {% endblock script %}
 
 {% block body %}
-    <div class="card p-2">
-        <h2 class="card-title">{{ profile.username }}</h2>
-        <div class="justify-content-start">
-            <span class="font-weight-bold mr-2">Followers: </span>
-            <span class="font-weight-bold ml-2">Following: </span>
+    <div class="card p-1 mt-1 w-75 mx-auto">
+        <div class="card-body">
+            <h2 class="card-title">{{ profile.username }}</h2>
+            <div class="justify-content-start">
+                <span class="font-weight-bold mr-2">Followers: 
+                    <span id="followers">{{ followers }}</span>
+                </span>
+                <span class="font-weight-bold ml-2">Following:
+                    <span id="following">{{ following }}</span>
+                </span>
+            </div>
+            {% if user.is_authenticated and user != profile %}
+                <div id="button">
+                    {% csrf_token %}
+                    <button id='follow-btn' class="btn btn-outline-primary sm"></button>
+                </div>
+            {% endif %}
         </div>
     </div>
     <hr>
@@ -30,6 +43,7 @@
             {% endfor %}
             <button type="submit" class="btn btn-primary">New Post</button>
         </form>
+    </div>
     </div>
     {% endif %}
     <div id="posts-view" class="container mx-auto w-50"></div>
