delete duplicate js scripts

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -6,7 +6,7 @@
         var section = 'all';
     </script>
     <script type='module' src="{% static 'network/newPost.js' %}"></script>
-    <script type='module' src="{% static 'network/index.js' %}"></script>
+    <script type='module' src="{% static 'network/main.js' %}"></script>
 {% endblock %}
 
 {% block body %}
