--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -5,7 +5,7 @@
     <script>
         var section = 'following';
     </script>
-    <script type='module' src="{% static 'network/following.js' %}"></script>
+    <script type='module' src="{% static 'network/main.js' %}"></script>
 {% endblock %}
 
 {% block body %}
