--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -18,7 +18,7 @@
                             <span id="like-count" data-id={{post.id}}></span>
                         </h6>
                         {% if user.is_authenticated %}
-                            <button id="like-btn" data-id={{post.id}} class="btn btn-outline-success btn-sm active">
+                            <button id="like-btn" data-id={{post.id}} class="btn btn-outline-success btn-sm">
                                 <i class="fa fa-thumbs-up"></i>
                             </button>
                         {% endif %}
