--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -11,7 +11,7 @@
 {% endblock script %}
 
 {% block body %}
-    <div class="card p-1 mt-1 w-75 mx-auto">
+    <div class="card p-1 mt-1 w-75 mx-auto bg-light">
         <div class="card-body">
             <h2 class="card-title">{{ profile.username }}</h2>
             <div class="justify-content-start">
@@ -30,21 +30,22 @@
             {% endif %}
         </div>
     </div>
-    <hr>
     {% if user.is_authenticated and user == profile %}
-    <div class="form-group mx-auto w-50">
-        <form id='new-post' class='p-2'>
-            {% csrf_token %}
-            {% for field in post_form %}
-                <h5>{{ field.label }}</h5>
-                <div class="form-group">
-                    {{ field }}
-                </div>
-            {% endfor %}
-            <button type="submit" class="btn btn-primary">New Post</button>
-        </form>
-    </div>
-    </div>
+        <div class="card w-75 mx-auto bg-light m-2">
+            <div class="form-group mx-auto w-50">
+                <form id='new-post' class='p-2'>
+                    {% csrf_token %}
+                    {% for field in post_form %}
+                        <h5>{{ field.label }}</h5>
+                        <div class="form-group">
+                            {{ field }}
+                        </div>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
     {% endif %}
+    <hr>
     <div id="posts-view" class="container mx-auto w-50"></div>
 {% endblock body %}
