--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -41,7 +41,7 @@
                             {{ field }}
                         </div>
                     {% endfor %}
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary float-right">Submit</button>
                 </form>
             </div>
         </div>
